// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CListGroupItem renders correctly 1`] = `
<div
  class="c-list-group-item"
/>
`;

exports[`CListGroupItem renders correctly 2`] = `
<button
  class="c-list-group-item c-list-group-item-success c-list-group-item-action"
  type="button"
>
  <template>
    CListGroupItem content
  </template>
</button>
`;

exports[`CListGroupItem renders correctly disabled 1`] = `
<button
  class="c-list-group-item c-list-group-item-action c-disabled"
  disabled="disabled"
  type="submit"
>
  <template>
    disabled CListGroupItem content
  </template>
</button>
`;
